@@ -1,9 +1,11 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.runtime' version '1.13.0'
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url 'https://jaspersoft.jfrog.io/jaspersoft/jaspersoft-repo' }
@@ -14,7 +16,6 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j:8.0.33'
     implementation 'com.jfoenix:jfoenix:9.0.4'
     implementation 'net.sf.jasperreports:jasperreports:6.20.5'
-    implementation 'com.itextpdf:itext7-core:8.0.0'
     implementation 'de.jensd:fontawesomefx-materialicons:2.2.0-9.1.2'
 
     implementation 'com.google.dagger:dagger:2.46.1'
@@ -44,4 +45,41 @@ tasks.named('test') {
 javafx {
     version = "20"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.graphics' ]
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs([
+            '--module-path', 'C:\\javafx-sdk-20.0.1\\lib',
+            '--add-modules=javafx.controls,javafx.graphics,javafx.fxml,javafx.web'
+    ])
+}
+
+def jvmArgsList =
+        [
+                '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+                '--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED'
+        ]
+
+runtime {
+    addModules('java.desktop', 'java.scripting')
+    addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
+    jpackage {
+        installerName = "project-penjualan-windows-x64"
+        imageName = "Project Penjualan"
+        version = "1.1.0"
+        installerOutputDir = file("C:\\Users\\LENOVO\\Downloads\\Penjualan")
+        installerOptions = [
+                '--win-per-user-install',
+                '--win-dir-chooser',
+                '--win-menu',
+                '--win-shortcut',
+                '--vendor', 'Daniel Kristian',
+        ]
+        imageOptions = ['--icon', "src/main/resources/me/stiller/images/icon.ico"]
+        installerType = "msi"
+        jvmArgs += jvmArgsList
+    }
 }
